Big Update: - ESLint - Improved foldering - New endpoint: Get Chats - New Endpoint: Get Profile Picture
